--- a/src/pug/admin-kategori-berita.pug
+++ b/src/pug/admin-kategori-berita.pug
@@ -57,7 +57,7 @@ block content
         +pagination
 block modal
   +modal_accept('hapus-berita')
-  +modal_with_close('modal-form-kategori-berita','Form Kategori Berita')
+  +modal_with_close('modal-form-kategori-berita','Form Kategori Berita')(title="Tambah")
     .p-4.d-flex.flex-column.gap-4
       div
         label.form-label(for='lokasi') Pilih Lokasi
