--- a/src/pug/admin-kategori-dokumen.pug
+++ b/src/pug/admin-kategori-dokumen.pug
@@ -53,7 +53,7 @@ block content
         +pagination
 block modal
   +modal_accept('hapus-kategori')
-  +modal_with_close('modal-form-kategori-dokumen','Form Kategori Dokumen')
+  +modal_with_close('modal-form-kategori-dokumen','Form Kategori Dokumen')(title="Tambah")
     .p-4.d-flex.flex-column.gap-4
       div
         label.form-label(for='kategori') Nama Kategori
