--- a/src/pug/admin-kategori-izin.pug
+++ b/src/pug/admin-kategori-izin.pug
@@ -57,7 +57,7 @@ block content
         +pagination
 block modal
   +modal_accept('hapus-kategori')
-  +modal_with_close('modal-form-kategori-izin','Form Kategori Izin')
+  +modal_with_close('modal-form-kategori-izin','Form Kategori Izin')(title="Tambah")
     .p-4.d-flex.flex-column.gap-4
       div
         label.form-label(for='place') Tempat Proses Perizinan
