--- a/src/pug/admin-paket.pug
+++ b/src/pug/admin-paket.pug
@@ -21,7 +21,7 @@ block content
           .position-absolute.top-0.start-0.d-flex.pt-2.px-2
             +bx('bx-search')
         div
-          button.btn.btn-primary(type="button")
+          button.btn.btn-primary(type="button" data-bs-toggle="modal" data-bs-target="#modal-form-paket")
             +bx('bx-plus')
             span Tambah Data
       .border.rounded
@@ -65,3 +65,53 @@ block content
         +pagination
 block modal
   +modal_accept('hapus-paket')
+  +modal_with_close('modal-form-paket','Form Paket')(class="modal-lg" title="Save" btn="btn-primary")
+    .row.row-cols-2.gy-3
+      .col
+        .d-flex.flex-column.gap-4
+          div
+            label.form-label(for='nama') Nama Paket
+            input#nama.form-control(type='text' placeholder="Nama Paket")
+          div
+            label.form-label(for='harga') Harga
+            input#harga.form-control(type='text' placeholder="Harga")
+          div
+            label.form-label(for='proyek') Proyek
+            input#proyek.form-control.mb-2(type='text' placeholder="Proyek")
+            .form-check.body-super
+              input#unlimited.form-check-input(type='checkbox' value='')
+              label.form-check-label.caption.align-middle(for='unlimited') Set Unlimited
+      .col
+        .d-flex.flex-column.gap-4
+          div
+            label.form-label(for='durasi') Durasi
+            input#durasi.form-control(type='text' placeholder="Durasi")
+          div
+            label.form-label(for='user') User
+            input#user.form-control(type='text' placeholder="User")
+          div
+            label.form-label(for='tutorial') Tutorial
+            select#tutorial.select.wide(name="tutorial")
+              option(value="" data-display="Unlimited") Unlimited
+              option(value="limited") Limited
+      .col-12
+        .mt-4
+          .row.row-cols-3
+            .col
+              div
+                label.form-label(for='historical') Historical Pengurusan
+                select#historical.select.wide(name="historical")
+                  option(value="" data-display="Ya") Ya
+                  option(value="tidak") Tidak
+            .col
+              div
+                label.form-label(for='jadwal') Jadwal Perizinan
+                select#jadwal.select.wide(name="jadwal")
+                  option(value="" data-display="Ya") Ya
+                  option(value="tidak") Tidak
+            .col
+              div
+                label.form-label(for='laporan') Laporan Perizinan Lengkap
+                select#laporan.select.wide(name="laporan")
+                  option(value="" data-display="Ya") Ya
+                  option(value="tidak") Tidak
