--- a/src/pug/admin-point-mitra.pug
+++ b/src/pug/admin-point-mitra.pug
@@ -47,7 +47,7 @@ block content
                     +bx('bx-pencil')
         +pagination
 block modal
-  +modal_with_close("modal-edit-point","Edit Point Mitra")
+  +modal_with_close("modal-edit-point","Edit Point Mitra")(title="Simpan")
     .d-flex.flex-column.gap-4
       div
         label.form-label(for='place') Tempat Perizinan
