--- a/src/pug/admin-set-hari-libur.pug
+++ b/src/pug/admin-set-hari-libur.pug
@@ -67,7 +67,7 @@ block content
         +pagination
 block modal
   +modal_accept('hapus-event')
-  +modal_with_close('modal-form-hari-libur','Form Hari Libur')
+  +modal_with_close('modal-form-hari-libur','Form Hari Libur')(title="Tambah")
     .p-4.d-flex.flex-column.gap-4
       div
         label.form-label(for='tanggal') Tanggal
