--- a/src/pug/layouts/mixins.pug
+++ b/src/pug/layouts/mixins.pug
@@ -88,13 +88,12 @@ mixin pagination(id)
             | Sembunyikan Dokumen
 mixin modal_with_close(id,judul="modal belum di kasih judul",bottom=true)
   .modal.fade(id=id tabindex="-1" aria-labelledby=id+"-label" aria-hidden="true")
-    .modal-dialog.modal-dialog-centered.modal-fullscreen-md-down.h-auto
+    .modal-dialog.modal-dialog-centered.modal-fullscreen-md-down.h-auto(class=attributes.class)
       .modal-content.rounded-0
-        .w-100.d-flex.justify-content-between.align-items-center.py-2.ps-4
+        .w-100.d-flex.justify-content-between.align-items-center.py-2.ps-4.pe-2
           h5.mb-0=judul
-          button.btn(data-bs-dismiss="modal")
-            +bx('bxl-xing')
-        .p-4.d-flex.flex-column.gap-4(class=attributes.class)
+          button.btn-close.p-4(type="button" aria-label="Close" data-bs-dismiss="modal")
+        .p-4.d-flex.flex-column.gap-4
           block
         if bottom
           .p-4.d-flex.gap-4.w-100
@@ -102,8 +101,8 @@ mixin modal_with_close(id,judul="modal belum di kasih judul",bottom=true)
               button.btn.btn-light(type="button" data-bs-dismiss="modal")
                 span Cancel
             .d-grid.flex-grow-1
-              button.btn.btn-outline-primary(type="button")
-                span Apply
+              button.btn(type="button" class=attributes.btn || "btn-outline-primary")
+                span=attributes.title || "Apply"
 mixin modal_accept(id)
   .modal.fade(id=id tabindex="-1" aria-labelledby=id+"-label" aria-hidden="true")
     .modal-dialog.modal-dialog-centered.modal-fullscreen-md-down.h-auto
