--- a/src/pug/admin-berita.pug
+++ b/src/pug/admin-berita.pug
@@ -21,7 +21,7 @@ block content
           .position-absolute.top-0.start-0.d-flex.pt-2.px-2
             +bx('bx-search')
         div
-          button.btn.btn-primary(type="button")
+          button.btn.btn-primary(type="button" data-bs-toggle="modal" data-bs-target="#modal-berita-form")
             +bx('bx-plus')
             span Tambah Data
       .border.rounded
@@ -56,3 +56,21 @@ block content
                         span Hapus
 block modal
   +modal_accept('hapus-berita')
+  +modal_with_close('modal-berita-form','Form Berita')(class="modal-lg" title="Save" btn="btn-primary")
+    div
+      label.form-label(for='judule') Judul Berita
+      input#judule.form-control(type='text' placeholder="Judul Berita")
+    div
+      label.form-label(for='kategori') Pilih Kategori
+      select#kategori.select.wide(name="kategori")
+        option(value="") Pilih Kategori
+        option(value="1") Kategori 1
+        option(value="2") Kategori 2
+        option(value="3") Kategori 3
+        option(value="4") Kategori 4
+    div
+      label.form-label(for='isi') Isi Berita
+      #editor
+    div
+      label.form-label(for='gambar') Upload Gambar
+      +file_upload('gambar')
